    * "get scancode name" [Ralph]
    * "get hero slice by slot", "get hero sprite by slot",
      "hero slot from slice" [Ralph]
    * Global script triggers for when a hero is added, deleted, or swapped to
      a different slot [Ralph]
    * "get opacity", "set opacity", "get blend mode", "set blend mode",
      "get blending enabled", "set blending enabled" [Ralph]

  *** Changes
    * Renamed "Enemy" target class to "Foe (not dead)", and "Ally" to
      "Ally (not dead)"
    * Empty active party slots no longer have hidden dummy hero slices, while
      reserve party heroes *do* have slices, so hero slices are now preserved
      until you save and reload the game. They're parented to a new hidden
      'Reserve' special slice [Ralph]

  *** Bugfixes
    * Linux builds should now hopefully work on all Linux systems since 2011
      (as long as SDL & SDL_mixer are installed) [Ralph]
    * On Windows, copy-pasting text caused spaces to be added at line ends,
      and near-full textboxes couldn't be copy-pasted [Ralph]
    * sf#2045: "Lost HP (target)" base attack stat was always 0 [Ralph]
    * Weapon pictures/palettes didn't update in saved games and Test Game
      after a weapon was edited [Ralph]
    * Script IDs could change when you reimported scripts, breaking script
      IDs stored in saved games (didn't affect Test Game) [Ralph]
    * OK, now you can *actually* import .wav files as music.
    * You couldn't import .wav or .mp3 files on Mac OS 10.15 (the utilities
      were still 32-bit) [Ralph]
    * A few fixes for heroes with negative HP not counting as dead when using
      spells outside of battle [Ralph]
    * Bug 1105 "Self"- and "Ally not Self"-target attacks are treated as
      "Ally"-target attacks outside of battle [Ralph]
    * Caterpillar party heroes overlapped when hero speed didn't divide evenly
      into 20, even with "Keep caterpillar length the same" on [Ralph]